Fix: z-index on header dropdown and on gallery navbar.

--- a/frontend/src/stylesheet/basic/basic_main/Header.scss
+++ b/frontend/src/stylesheet/basic/basic_main/Header.scss
@@ -92,7 +92,7 @@
   min-width: fit-content;
   white-space: nowrap;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 2;
+  z-index: 3;
   border-radius: 0 0 20px 20px;
 }
 
