--- a/frontend/src/stylesheet/basic/basic_main/UserImages.scss
+++ b/frontend/src/stylesheet/basic/basic_main/UserImages.scss
@@ -45,7 +45,7 @@
   .navigation-bar {
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 2;
     background-color: $background-color-darker;
     width: 100%;
     height: 50px;
